--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -4048,3 +4048,431 @@
   priority: 1
   effect:
     - effect_skill_add_mark_shoudaoshanghaijianshao_75
+# 伊特系列技能
+- id: skill_tisusu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spe_1_stages
+- id: skill_yitelingyu
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_yitelingyu
+- id: skill_yiteguanghuan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_crit_if_has_yitelingyu
+- id: skill_yitejieji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 65
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_crit_if_has_yitelingyu
+# 风伊特技能
+- id: skill_qiliuyongdong
+  element: Wind
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_qiliuyongdong
+- id: skill_fengjuancanyun
+  element: Wind
+  category: Special
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spd_1_stage_15_percent
+- id: skill_jiyun
+  element: Wind
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_spa_1_stages
+- id: skill_jisufeiyu
+  element: Wind
+  category: Special
+  target: opponent
+  power: 45
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+- id: skill_fengbaozhixing
+  element: Wind
+  category: Special
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_rage_20_if_rage_below_40
+- id: skill_zhenkongxi
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 55
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_2x_if_first
+- id: skill_shenfengliepoxi
+  element: Wind
+  category: Climax
+  target: opponent
+  power: 170
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_def_20_percent
+    - effect_skill_reduce_foe_spd_20_percent
+- id: skill_fengzhilingyu
+  element: Wind
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_fengzhilingyu_or_fengbaolingyu
+- id: skill_longjuankuangfeng
+  element: Wind
+  category: Special
+  target: opponent
+  power: 50
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_100_if_fengzhilingyu_200_if_fengbaolingyu
+- id: skill_daqiliu
+  element: Wind
+  category: Status
+  target: self
+  power: 0
+  rage: 0
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_rage_25
+- id: skill_yitesanlianxing
+  element: Normal
+  category: Climax
+  target: opponent
+  power: 85
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: ['combination']
+  multihit: 3
+# 电伊特技能
+- id: skill_jingdianmaichong
+  element: Electric
+  category: Special
+  target: opponent
+  power: 70
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_mabi_70_percent
+- id: skill_xunleiqie
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 45
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: 1
+  effect:
+    - effect_skill_power_2x_if_foe_mabi
+- id: skill_jidiantushan
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 75
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_dianhe_1
+- id: skill_bairen
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 90
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  priority: -1
+  effect:
+    - effect_skill_power_2x_if_last
+- id: skill_diancizhixing
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_crit_rate_15_percent
+    - effect_skill_raise_atk_1_stage_on_crit
+- id: skill_shandianwaiyi
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shandianwaiyi
+- id: skill_shandianxingguangzhan
+  element: Electric
+  category: Climax
+  target: opponent
+  power: 170
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_20_percent
+    - effect_skill_raise_spa_20_percent
+- id: skill_dianzhilingyu
+  element: Electric
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_dianzhilingyu_or_diancilingyu
+- id: skill_tianleishan
+  element: Electric
+  category: Physical
+  target: opponent
+  power: 50
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_100_if_dianzhilingyu_200_if_diancilingyu
+- id: skill_shanyue
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 25
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_shanbi
+# 冰伊特技能
+- id: skill_shenjie
+  element: Ice
+  category: Special
+  target: opponent
+  power: 65
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_bingdong_40_percent
+- id: skill_pobing
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 80
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_sure_crit_if_foe_bingdong
+- id: skill_dongqi
+  element: Ice
+  category: Status
+  target: opponent
+  power: 0
+  rage: 10
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_atk_1_stage
+    - effect_skill_reduce_foe_spa_1_stage_if_bingdong
+- id: skill_bingningzhiqi
+  element: Ice
+  category: Special
+  target: opponent
+  power: 90
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_bingningzhiqi
+- id: skill_bingshuangzhixing
+  element: Ice
+  category: Special
+  target: opponent
+  power: 100
+  rage: 20
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_foe_bingshuangzhixing
+- id: skill_bingguzhishen
+  element: Ice
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_mianyiyichang
+- id: skill_jibingqianliepuo
+  element: Ice
+  category: Climax
+  target: opponent
+  power: 170
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_reduce_foe_spe_20_percent
+- id: skill_bingzhilingyu
+  element: Ice
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_bingzhilingyu_or_bingshuanglingyu
+- id: skill_bingtiandixue
+  element: Ice
+  category: Special
+  target: opponent
+  power: 50
+  rage: 20
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_power_100_if_bingzhilingyu_200_if_bingshuanglingyu
+- id: skill_hanbingjia
+  element: Ice
+  category: Status
+  target: self
+  power: 0
+  rage: 15
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_hanbingjia
