--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -130,3 +130,16 @@ mark_first_turn_after_switch: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-re
 mark_xukongtizhi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3153.png'
 mark_xukongganying: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3154.png'
 mark_shoudaoshanghaijianshao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3041.png'
+mark_yitelingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3081.png'
+mark_qiliuyongdong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3082.png'
+mark_fengzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3083.png'
+mark_fengbaolingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3084.png'
+mark_dianhe: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3085.png'
+mark_dianzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3086.png'
+mark_diancilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3087.png'
+mark_bingzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3088.png'
+mark_bingshuanglingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3089.png'
+mark_shandianwaiyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4006.png'
+mark_bingningzhiqi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3091.png'
+mark_bingshuangzhixing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3092.png'
+mark_hanbingjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/4005.png'
