--- a/resource/skill_sound.yaml
+++ b/resource/skill_sound.yaml
@@ -334,3 +334,39 @@ skill_xuanwotuxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/
 skill_xuanwochuantou: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_1_003.mp3'
 skill_xuanwozhadan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_2_002.mp3'
 skill_xukongtizhi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/03_3_001.mp3'
+# 伊特系列技能音效
+skill_tisusu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_yitelingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_yiteguanghuan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_yitejieji: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_qiliuyongdong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_fengjuancanyun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_jiyun: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_jisufeiyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
+skill_fengbaozhixing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_zhenkongxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_shenfengliepoxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10530.mp3'
+skill_fengzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_longjuankuangfeng: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_daqiliu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_yitesanlianxing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10534.mp3'
+skill_jingdianmaichong: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_001.mp3'
+skill_xunleiqie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_jidiantushan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_003.mp3'
+skill_bairen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_001.mp3'
+skill_diancizhixing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_shandianwaiyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_002.mp3'
+skill_shandianxingguangzhan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10541.mp3'
+skill_dianzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_tianleishan: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_shanyue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_003.mp3'
+skill_shenjie: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_002.mp3'
+skill_pobing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_1_002.mp3'
+skill_dongqi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_bingningzhiqi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_bingshuangzhixing: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_bingguzhishen: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_jibingqianliepuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/10551.mp3'
+skill_bingzhilingyu: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
+skill_bingtiandixue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_2_003.mp3'
+skill_hanbingjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/sound/skill/01_3_001.mp3'
